<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    android:padding="5dp"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="6dp"
        android:layout_marginBottom="6dp"
        android:background="@color/secondary"
        android:padding="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="VisualLintBounds">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:ignore="UselessParent">

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:textColor="@color/primary"
                android:textSize="38sp"
                android:textStyle="bold"
                android:typeface="normal" />

            <TextView
                android:id="@+id/subtitle1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/subtitle"
                android:textColor="@color/primary"
                android:textSize="18sp" />


            <EditText
                android:id="@+id/textToCompare"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:autofillHints=""
                android:background="@color/primary"
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/text_input_one"
                android:inputType="textMultiLine"
                android:textColor="@color/secondary"
                android:textColorHint="@color/secondary"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <TextView
                android:id="@+id/subtitle2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/subtitle_2"
                android:textColor="@color/primary"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/textToCompare2"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:autofillHints=""
                android:background="@color/primary"
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/text_input_one"
                android:inputType="textMultiLine"
                android:textColor="@color/secondary"
                android:textColorHint="@color/secondary" />

            <RelativeLayout
                android:id="@+id/textEqualToShow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:visibility="gone"
                tools:visibility="visible">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textCompare"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif"
                        android:text="@string/text_compare"
                        android:textAlignment="center"
                        android:textColor="@color/primary"
                        android:textSize="28sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textEqual"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:fontFamily="sans-serif"
                        android:text="@string/text_equal"
                        android:textAlignment="center"
                        android:textColor="@color/green"
                        android:textSize="36sp"
                        android:textStyle="bold" />
                </LinearLayout>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/textUnequalToShow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:visibility="gone"
                tools:visibility="visible">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textNotCompare"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif"
                        android:text="@string/text_not_compare"
                        android:textAlignment="center"
                        android:textColor="@color/primary"
                        android:textSize="28sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textNotEqual"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:fontFamily="sans-serif"
                        android:text="@string/text_not_equal"
                        android:textAlignment="center"
                        android:textColor="@color/red"
                        android:textSize="36sp"
                        android:textStyle="bold"
                        tools:ignore="TextContrastCheck" />
                </LinearLayout>

            </RelativeLayout>

            <Button
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="61dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="15dp"
                android:background="@color/primary"
                android:backgroundTintMode="add"
                android:fontFamily="sans-serif"
                android:text="@string/text_compare_button"
                android:textColor="@color/secondary"
                android:textColorHighlight="@color/primary"
                android:textColorLink="@color/primary"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>


